--- a/people.qmd
+++ b/people.qmd
@@ -2,10 +2,34 @@
 title: "Members"
 ---
 
-Member of CIRCE (Community of Italian Researchers Connecting on Extreme Value Statistics). 
 
-<br> 
+## Faculty Members
 
-Isadora Antoniano-Villalobos  (Ca' Foscari University of Venice)
-Carlo Gaetan (Ca' Foscari University of Venice)
-Simone Padoan (Bocconi)
+- [Isadora Antoniano Villalobos](https://www.unive.it/data/persone/20055797) (Ca' Foscari University of Venice)
+- [Marco Bee](https://webapps.unitn.it/du/it/Persona/PER0003397/Curriculum) (University of Trento)
+- [Paola Bortot](https://www.unibo.it/sitoweb/paola.bortot) (University of Bologna)
+- [Nicola Gnecco](https://profiles.imperial.ac.uk/n.gnecco) (Imperial College London)
+- [Carlo Gaetan](https://www.unive.it/data/persone/5591383) (Ca' Foscari University of Venice)
+- [Amir Khorrami Chokami](https://web.unica.it/unica/page/it/amir_khorramichokami) (University of Cagliari)
+- [Fabrizio Laurini](https://personale.unipr.it/it/ugovdocenti/person/22727) (University of Parma)
+- [Francesco Pauli](https://deams.units.it/en/node/1330) (University of Trieste)
+- [Simone Padoan](https://dec.unibocconi.eu/faculty/simone-padoan) (Bocconi University)
+- [Roberta Pappada](https://deams.units.it/it/dipartimento/persone/personale-docente?q=it/node/17847) (University of Trieste)
+- [Ilaria Prosdocimi](https://www.unive.it/data/persone/19166744) (Ca' Foscari University of Venice)
+- [Stefano Rizzelli](https://homes.stat.unipd.it/stefanorizzelli/) (University of Padua)
+- [Emanuele Taufer](https://webapps.unitn.it/du/it/Persona/PER0003692/Curriculum) (University of Trento)
+- [Luca Trapin](https://www.unibo.it/sitoweb/luca.trapin/) (University of Bologna)
+
+## Early Career Researchers (PhD students and Post-docs)
+
+- [Ivo Bonfanti](https://www.unibo.it/sitoweb/ivo.bonfanti) (University of Bologna)
+- [David Carl](https://dlcarl.github.io/) (Bocconi University)
+- [Lorenzo Dell'Oro](https://www.stat.unipd.it/ricerca/lorenzo-delloro) (University of Padua)
+- [Nathan Huet](https://www.unive.it/data/people/29085331) (Ca' Foscari University of Venice)
+- [Amerigo Novaro](https://www.linkedin.com/in/amerigo-novaro-19b3a1285/?originalSubdomain=it) (University of Padua)
+- [Mike Noori](https://sites.google.com/view/mikenoori) (University of Trento)
+- [Carlotta Pacifici](https://www.linkedin.com/in/carlotta-pacifici-a9a240173/?originalSubdomain=it?) (Bocconi University)
+- [Massimo Ricci](https://www.unibo.it/sitoweb/massimo.ricci10) (University of Bologna)
+- [Matteo Schiavone](https://www.stat.unipd.it/en/en/en/en/en/en/en/en/en/en/en/ricerca/matteo-schiavone) (University of Padua)
+- [Emilia Siviero](https://emiliasiv.github.io/) (Ca' Foscari University of Venice)
+
