--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -21,7 +21,7 @@ Tentative schedule for the day
 | 14:30 – 15:10 | Roberta Pappadà | Amir Khorrami |
 | 15:10 – 15:50 | Lorenzo Dell’Oro | Paola Bortot |
 | 15:50 – 16:00 | *Break* | |
-| 16:00 – 16:40 | Matteo Schiavone | Emanuele Taufer |
+| 16:00 – 16:40 | Matteo Schiavone | Fabrizio Laurini |
 | 16:40 – 17:00 | **Closing remarks** | |
 
 :  {.striped .hover}
