--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -1,15 +1,16 @@
 ---
 title: "CIRCE Meeting 2026 - Milan"
-description: "1st CIRCE Meeting"
 meeting-date: "2026-01-26"
 categories: [CIRCE]
 ---
 
-**Date:** 26 January 2026  
+## Date
+26 January 2026
 
-**Location:** Bocconi University (Aula 205, Via Sarfatti 25)
+## Location
+Bocconi University (Aula 205, Via Sarfatti 25)
 
-**Program**
+## Program
 
 | Time | Session | Discussant |
 |:---:|:---|:---|
@@ -25,7 +26,7 @@ categories: [CIRCE]
 | 15:50 – 16:00 | *Break* | |
 | 16:00 – 16:40 | Matteo Schiavone<br>*TBD* | Fabrizio Laurini |
 | 16:40 – 17:00 | **Closing remarks** | |
-
 : {.striped .hover}
 
-**Contact:** send an email to luca.trapin@unibo.it if you want to join.
+## Contact
+Send an email to <luca.trapin@unibo.it> if you want to join.
