--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -24,6 +24,6 @@ categories: [CIRCE]
 | 15:50 – 16:00 | *Break* | |
 | 16:00 – 16:40 | Matteo Schiavone<br>*TBD* | Fabrizio Laurini |
 | 16:40 – 17:00 | **Closing remarks** | |
-: {.striped .hover}
+: {.striped .hover .program-table}
 
 **Contact:** Send an email to <luca.trapin@unibo.it> if you want to join.
