--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -1,5 +1,5 @@
 ---
-title: "The first CIRCE Meeting 2026 - Milan"
+title: "First CIRCE Meeting 2026 - Milan"
 description: "Annual scientific meeting of CIRCE"
 meeting-date: "2026-01-26"
 categories: [CIRCE]
