--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -30,7 +30,7 @@ format:
 | 14:30 – 15:10 | Roberta Pappadà<br>*Extremal dependence clustering with spatial constraints* | Amir Khorrami |
 | 15:10 – 15:50 | Lorenzo Dell’Oro<br>*Extended modelling of spatial extremes with Gaussian location-scale mixtures* | Paola Bortot |
 | 15:50 – 16:00 | *Break* | |
-| 16:00 – 16:40 | Matteo Schiavone<br>*TBD* | Fabrizio Laurini |
+| 16:00 – 16:40 | Matteo Schiavone<br>*Nonparametric Estimation of the Spectral Density* | Fabrizio Laurini |
 | 16:40 – 17:00 | **Closing remarks** | |
 : {.striped .hover .program-table}
 
