--- a/index.qmd
+++ b/index.qmd
@@ -1,22 +1,9 @@
 ---
 title: "CIRCE"
+subtitle: "Community of Italian Researchers Connecting on Extreme Value Statistics"
 ---
 
-CIRCE (Community of Italian Researchers Connecting on Extreme Value Statistics). 
-
-<br> 
-
-## Aim and community coordinators 
-
-The aim of the community is to create a space for Italian researchers interested in Extreme Value Statistics to network and interact. It was established in January 2026 during the [first CIRCE meeting](meetings/meeting20060126.qmd). 
-
-Currently the Community is coordinated by 
-
-- [Simone Padoan](https://dec.unibocconi.eu/faculty/simone-padoan)
-- [Ilaria Prosdocimi](https://www.unive.it/data/people/19166744)
-- [Luca Trapin](https://sites.google.com/site/lucatrapin/home)
+CIRCE is an Italian research network with the aim of fostering collaboration and advancing research in **Extreme Value Theory (EVT)** and its applications. The community brings together italian researchers working on the theory, methodology, and applications of extreme value statistics. It is open to **faculty members, postdoctoral researchers, PhD students, and practitioners** interested in extremes.
 
 
-## How to join  
 
-You can email any of the coordinators to be added to the community.  
