Fix typo in About

--- a/people.qmd
+++ b/people.qmd
@@ -9,16 +9,19 @@ title: "Members"
 - [Isadora Antoniano Villalobos](https://www.unive.it/data/persone/20055797) (Ca' Foscari University of Venice)
 - [Marco Bee](https://webapps.unitn.it/du/it/Persona/PER0003397/Curriculum) (University of Trento)
 - [Paola Bortot](https://www.unibo.it/sitoweb/paola.bortot) (University of Bologna)
+- [Gioia Di Credico](https://deams.units.it/it/dipartimento/persone/personale-docente?q=it/node/54237)
 - [Nicola Gnecco](https://profiles.imperial.ac.uk/n.gnecco) (Imperial College London)
 - [Carlo Gaetan](https://www.unive.it/data/persone/5591383) (Ca' Foscari University of Venice)
 - [Amir Khorrami Chokami](https://web.unica.it/unica/page/it/amir_khorramichokami) (University of Cagliari)
 - [Fabrizio Laurini](https://personale.unipr.it/it/ugovdocenti/person/22727) (University of Parma)
+- [Giulia Marcon](https://scholar.google.com/citations?user=ctVn_CgAAAAJ&hl=it)
 - [Francesco Pauli](https://deams.units.it/en/node/1330) (University of Trieste)
 - [Simone Padoan](https://dec.unibocconi.eu/faculty/simone-padoan) (Bocconi University)
 - [Roberta Pappada](https://deams.units.it/it/dipartimento/persone/personale-docente?q=it/node/17847) (University of Trieste)
 - [Ilaria Prosdocimi](https://www.unive.it/data/persone/19166744) (Ca' Foscari University of Venice)
 - [Stefano Rizzelli](https://homes.stat.unipd.it/stefanorizzelli/) (University of Padua)
 - [Emanuele Taufer](https://webapps.unitn.it/du/it/Persona/PER0003692/Curriculum) (University of Trento)
+- [Andrea Toreti](https://scholar.google.com/citations?user=6JLQIWYAAAAJ&hl=it)
 - [Luca Trapin](https://www.unibo.it/sitoweb/luca.trapin/) (University of Bologna)
 
 <div style="height: 1.2rem;"></div>
@@ -30,6 +33,7 @@ title: "Members"
 - [David Carl](https://dlcarl.github.io/) (Bocconi University) 
 - [Lorenzo Dell'Oro](https://www.stat.unipd.it/ricerca/lorenzo-delloro) (University of Padua)
 - [Alfedo Gimenez Zapiola](https://mox.polimi.it/people/people-details/?id_staff=100045&nome_staff=Alfredo%20Gimenez%20Zapiola) (Politecnico di Milano)
+- [Vincenzo Gioia](https://scholar.google.com/citations?user=yRDtG0gAAAAJ&hl=it)
 - [Nathan Huet](https://www.unive.it/data/people/29085331) (Ca' Foscari University of Venice)
 - [Amerigo Novaro](https://www.linkedin.com/in/amerigo-novaro-19b3a1285/?originalSubdomain=it) (University of Padua)
 - [Mike Noori](https://sites.google.com/view/mikenoori) (University of Trento)
