Fix typo in About

--- a/meetings/meeting20060126.qmd
+++ b/meetings/meeting20060126.qmd
@@ -13,6 +13,14 @@ format:
 
 **Location:** Bocconi University (Aula 205, Via Sarfatti 25)
 
+
+![](../assets/FotoCirceMeetingMilan.jpg){fig-align="center" width="80%"}
+
+*First CIRCE Meeting, Bocconi University – Milan*
+
+
+
+
 **Program** [(here as pdf)](../assets/01_CIRCE26JAN2026.pdf)
 
 <div style="margin-bottom: 2rem;"></div>
